@@ -66,6 +66,7 @@
 
 #include "httpd.h"
 #include "http_config.h"
+#include "http_log.h"
 
 typedef struct {
     table *forced_types;        /* Additional AddTyped stuff */
@@ -215,9 +216,8 @@ static void init_mime(server_rec *s, pool *p)
     types_confname = ap_server_root_relative(p, types_confname);
 
     if (!(f = ap_pcfg_openfile(p, types_confname))) {
-        perror("fopen");
-        fprintf(stderr, "httpd: could not open mime types file %s\n",
-                types_confname);
+        ap_log_error(APLOG_MARK, APLOG_ERR, s,
+		     "httpd: could not open mime types log file %s.\n", types_confname);
         exit(1);
     }
 
